# omero-rdf

./: .bumpversion.cfg  .gitattributes  .gitignore  .isort.cfg  .pre-commit-config.yaml  CHANGES.txt  MANIFEST.in  README.rst  pyproject.toml  setup.cfg  setup.py
.github/workflows/: omero_plugin.yml  publish_pypi.yml
.omeroci/: README  release
src/omero/plugins/: rdf.py
src/omero_rdf/: __init__.py  _version.py  control.py  formats.py  handler.py  idr_annotations.py  library.py  ome_to_rdf.py  rdf_ingestion.py  utils.py
test/integration/clitest/: test_rdf.py
test/integration/test_idr/: test_lib_api.py
test/unit/: test_validate_extensions.py
