[build-system]
requires = [
    "setuptools>=60",
    "setuptools-scm>=8.0",
]

[tool.setuptools_scm]

[tools.setuptools.dynamic]
version = {attr = "omero_rdf.__version__"}

[project]
name = "omero-rdf"
readme = "README.rst"
dynamic = ["version"]
description="A plugin for exporting RDF from OMERO"

requires-python = ">=3.10,<3.13"

dependencies = [
    "omero-py>=5.8",
    "importlib-metadata",
    "future",
    "rdflib",
    "pyld",
    "rdflib-pyld-compat",
    "omero-marshal",
    "packaging",
    'zeroc-ice @ https://github.com/ome/zeroc-ice-py-github-ci/releases/download/0.2.0/zeroc_ice-3.6.5-cp310-cp310-linux_x86_64.whl ; platform_system=="Linux" and python_version=="3.10"',
    'zeroc-ice @ https://github.com/glencoesoftware/zeroc-ice-py-linux-x86_64/releases/download/20240202/zeroc_ice-3.6.5-cp311-cp311-manylinux_2_28_x86_64.whl ; platform_system=="Linux" and python_version=="3.11"',
    'zeroc-ice @ https://github.com/glencoesoftware/zeroc-ice-py-linux-x86_64/releases/download/20240202/zeroc_ice-3.6.5-cp312-cp312-manylinux_2_28_x86_64.whl ; platform_system=="Linux" and python_version=="3.12"',
    'zeroc-ice @ https://github.com/glencoesoftware/zeroc-ice-py-macos-universal2/releases/download/20240131/zeroc_ice-3.6.5-cp310-cp310-macosx_11_0_universal2.whl ; platform_system!="Windows" and platform_system!="Linux" and python_version=="3.10"',
    'zeroc-ice @ https://github.com/glencoesoftware/zeroc-ice-py-macos-universal2/releases/download/20240131/zeroc_ice-3.6.5-cp311-cp311-macosx_11_0_universal2.whl ; platform_system!="Windows" and platform_system!="Linux" and python_version=="3.11"',
    'zeroc-ice @ https://github.com/glencoesoftware/zeroc-ice-py-macos-universal2/releases/download/20240131/zeroc_ice-3.6.5-cp312-cp312-macosx_11_0_universal2.whl ; platform_system!="Windows" and platform_system!="Linux" and python_version=="3.12"'
]

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Plugins",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

keywords = [
    "OMERO.cli", "plugin",
]

authors = [
    {name = "The Open Microscopy Team"},
]

[project.optional-dependencies]
tests = [
    "pytest",
    "restview",
    "mox3",
]
dev = [
    "ruff",
]

[project.urls]
Repository = "https://github.com/German-BioImaging/omero-rdf"
Changelog = "https://github.com/German-BioImaging/omero-rdf/blob/master/CHANGES.txt"

# Subplugins should register there entrypoints like this:
# [project.entry-points."omero_rdf.annotation_handler"]
# idr_annotations = "omero_rdf_wikidata.idr_annotations:IDRAnnotationHandler"

[tool.setuptools]
package-dir = {""= "src"}

[tools.mypy]
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
disallow_any_generics = false
ignore_missing_imports = true
