[metadata]
description-file = README.rst

# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

[versioneer]
VCS = git
style = pep440
versionfile_source = src/omero_rdf/_version.py
versionfile_build =
tag_prefix = v
parentdir_prefix = src/omero_rdf/

[options]
install_requires =
    wikidataintegrator
    types-entrypoints

[mypy]
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
# FIXME
disallow_any_generics = False
ignore_missing_imports = True

[mypy-setup]
disallow_untyped_defs = false

[mypy-test_rdf]
disallow_untyped_defs = false
